fix overflow for lang dropdown

--- a/src/app/components/lang-switcher/lang-switcher.css
+++ b/src/app/components/lang-switcher/lang-switcher.css
@@ -4,6 +4,8 @@
 
 .lang-switcher ul {
   width: fit-content;
+  overflow: hidden;
+  padding: 5px;
 }
 
 .lang-switcher button::after {
